quiz images bugfix with overflow:hidden

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -739,11 +739,14 @@ button:hover {
 	align-items: center;
 	border: 1px solid $gray-color;
 	margin-bottom: 22px;
+	overflow: hidden;
 
 	& img {
 		//filter: brightness(100%);
 		transform: scale(1);
 		transition: all 0.3s ease;
+
+
 	}
 
 
